...
  }) {
    final l10n = AppLocalizations.of(context);
    if (allEntries.isEmpty) {
      return Center(
        child: Text(
          l10n.entryListEmpty,
          key: const ValueKey('entryListEmptyState'),
          style: theme.textTheme.labelLarge?.copyWith(
            color: theme.colorScheme.secondary,
          ),
          textAlign: TextAlign.center,
        ),
      );
...
